# lablink

./: .dockerignore  .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.worker  LandingPage.html  Makefile  Procfile  README.md  alembic.ini  decision_history.md  docker-compose.yml  lablink.db-shm  lablink.db-wal  llms-full.txt  llms.txt  pyproject.toml  seed-frontend-agent.yaml  seed.yaml
backend/: pyproject.toml
backend/app/: config.py  dependencies.py  exceptions.py  main.py
backend/app/core/: CLAUDE.md  __init__.py  database.py  hashing.py  security.py  state_machine.py
backend/app/mcp_server/: CLAUDE.md  __init__.py  context.py  server.py  types.py
backend/app/models/: CLAUDE.md  __init__.py  base.py  data.py  experiment.py  identity.py  ingestion.py  instrument.py  system.py
backend/app/parsers/: CLAUDE.md  __init__.py  balance.py  base.py  hplc.py  pcr.py  plate_reader.py  spectrophotometer.py
backend/app/routers/: CLAUDE.md  audit.py  auth.py  experiments.py  files.py  health.py
backend/app/schemas/: CLAUDE.md  __init__.py  audit.py  auth.py  campaign.py  envelope.py  experiment.py  file_upload.py  organization.py  parsed_result.py  project.py  webhook.py
backend/app/services/: CLAUDE.md  __init__.py  audit.py  auth.py  experiment.py  file_service.py  storage.py
backend/app/tasks/: parse_file.py
backend/tests/: __init__.py  conftest.py  test_app_factory.py  test_audit_event.py  test_audit_service.py  test_auth.py  test_corrupted_input.py  test_database.py  test_file_upload.py  test_hashing.py  test_identity_models.py  test_mcp_planner.py  test_parser_balance.py  test_storage.py
backend/tests/fixtures/: balance_edge_case.csv  balance_malformed.csv  balance_mettler.csv  balance_mettler_toledo.csv  balance_simple.csv  cary_uvvis_scan.csv  hplc_agilent.csv  hplc_corrupted.csv  hplc_edge_case.csv  hplc_malformed.csv  hplc_shimadzu.csv  nanodrop_export.csv  pcr_biorad.csv  pcr_biorad_cfx.csv  pcr_corrupted.csv  pcr_edge_case.csv  pcr_high_ct.csv  pcr_malformed.csv  pcr_quantstudio.csv  plate_reader_96well.csv  plate_reader_edge.csv  plate_reader_empty.csv  plate_reader_tabular.csv  spectro_edge_case.csv  spectro_malformed.csv
backend/tests/parsers/: test_hplc.py  test_pcr.py  (+1 more)
(+396 files in other folders)
