[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lablink"
version = "0.1.0"
description = "Agent-native lab data integration platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.9.0,<2.12.0",
    "pydantic-settings>=2.7.0,<2.12.0",
    "python-multipart>=0.0.18",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.0",
    "celery[redis]>=5.4.0",
    "email-validator>=2.3.0",
    "fastmcp>=2.0.0",
    "allotropy>=0.1.112,<0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lablink"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src", "backend"]

[tool.ruff]
target-version = "py312"
line-length = 100
